@@ -643,10 +643,12 @@ int snprintf(char* buf, int len, char const* fmt, ...)
 #ifdef BOOST_NO_EXCEPTIONS
 #define TORRENT_TRY if (true)
 #define TORRENT_CATCH(x) else if (false)
+#define TORRENT_CATCH_ALL else if (false)
 #define TORRENT_DECLARE_DUMMY(x, y) x y
 #else
 #define TORRENT_TRY try
 #define TORRENT_CATCH(x) catch(x)
+#define TORRENT_CATCH_ALL catch(...)
 #define TORRENT_DECLARE_DUMMY(x, y)
 #endif // BOOST_NO_EXCEPTIONS
 
